hphp/hack/test/typecheck/conditional_class_decl.php.exp
File "conditional_class_decl.php", line 13, characters 9-8:
Declarations are not supported outside global scope (Parsing[1002])
